# data-engineering-zoomcamp

./: .gitignore  data_warehouse_homework.sql  dbt_project.yml  green_tripdata.sql
Kestra/: docker-compose.yaml
Kestra/flows/: 01_hello_world.yaml  07_gcp_setup.yaml  08_gcp_taxi.yaml
analyses/: fct_trips_verification.sql
docker_terraform_homework/: Dockerfile  upload_data.py
homework/: Dockerfile  hist  pyproject.toml  upload_data.ipynb
kestra_homework/: homework.yaml
macros/: get_vendor_name.sql  get_vendor_names.sql
models/marts/: dim_vendors.sql  dim_zones.sql  fct_trips.sql
models/marts/reporting/: fct_monthly_zone_revenue.sql
models/staging/: sources.yml  stg_data_test.sql  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_models.yml  stg_yellow_tripdata.sql
pipeline/: Dockerfile  Untitled.ipynb  docker  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
